# unicap

./: .bzrignore  .gitignore
examples/: Makefile  README
examples/c/: Makefile
examples/c/xv_display/xv_display-0.0.7/: Makefile  Makefile.am  Makefile.in  aclocal.m4  config.h  config.h.in  config.status  config.status.lineno  configure  configure.in  libtool  xv.c  xv.h  xv_display  xv_display.c
examples/device_specific/: Makefile
examples/unicapgtk/: Makefile
libucil/: ChangeLog  Makefile.am  Makefile.in  aclocal.m4  config.h.in  configure  configure.ac  libucil.pc.in
libucil-0.9.8/: Makefile.am  Makefile.in  README  aclocal.m4  configure
libucil-0.9.8/include/: Makefile.am  Makefile.in  colorspace.h  ucil_alsa.h  ucil_audio.h  ucil_avc_avi.h  ucil_png.h  ucil_rawavi.h  ucil_theora.h  ucil_version.h
libucil-0.9.8/src/: Makefile.am  Makefile.in  draw.c  rgbops.c  ucil.c  ucil_alsa.c  ucil_avc_avi.c  ucil_png.c  ucil_theora.c  yuvops.c
libucil/debian/: changelog  control  copyright  libucil-dev.install  libucil-doc.dirs  libucil-doc.install  libucil2-dev.install  libucil2.install  rules
libucil/doc/: Makefile.am  Makefile.in
libucil/doc/libucil/: Makefile.in  libucil-decl-list.txt  libucil-decl.txt  libucil-docs.sgml
libucil/doc/libucil/html/: ch01.html  index.html  index.sgml  libucil-draw.html  libucil-mpeg.html  libucil-ucil.html  libucil.devhelp  libucil.devhelp2
libucil/doc/libucil/tmpl/: colorspace.sgml  convolution.sgml  draw.sgml  libucil-unused.sgml  mpeg.sgml  rgbops.sgml  ucil.sgml  yuvops.sgml
libucil/doc/libucil/xml/: api-index-full.xml  draw.xml  mpeg.xml  queue.xml  ucil.xml  ucil_version.xml
libucil/include/: Makefile.am  Makefile.in  avi.h  draw.h  rgbops.h  ucil.h  ucil_gstreamer.h  ucil_ppm.h  ucil_private.h  ucil_version.h.in  video_file.h  yuvops.h
libucil/src/: Makefile.am  Makefile.in  colorspace.c  draw.c  font.c  rgbops.c  ucil.c  ucil_audio.c  ucil_gstreamer.c  ucil_png.c  ucil_ppm.c  ucil_rawavi.c  ucil_theora.c  ucil_ucfile.c  video_file.c  yuvops.c
libunicap/: ChangeLog  Makefile.am  Makefile.in  README  autogen.sh  config.h.in  configure  configure.ac
libunicap-0.9.8/: ChangeLog  aclocal.m4  configure  libunicap.pc.in
libunicap-0.9.8/common/: Makefile.am  Makefile.in  queue.h
libunicap-0.9.8/cpi/thing/: Makefile.am  Makefile.in  thing.c  thing.h
libunicap-0.9.8/doc/: Makefile.am  Makefile.in
libunicap-0.9.8/include/: Makefile.am  Makefile.in  unicap_version.h  unicap_version.h.in
libunicap-0.9.8/po/: Makevars  de.po  ru.po
libunicap-0.9.8/src/: Makefile.am  check_match.c  unicap.c  unicap_cache.c  unicap_helpers.c
libunicap/common/: Makefile.am  Makefile.in  queue.c  queue.h  ucutil.h
libunicap/cpi/: Makefile.am  Makefile.in  TODO
libunicap/cpi/aravis/: Makefile.am  aravis_cpi.c  aravis_cpi.h  aravis_properties.c  aravis_properties.h  aravis_tools.c  aravis_tools.h  queue.h
libunicap/cpi/dcam/: Makefile.am  Makefile.in  dcam.c  dcam.h  dcam_functions.c  dcam_juju.h  dcam_juju_capture.c  dcam_property.c  dcam_property.h  dcam_property_table.h  dcam_v_modes.c
libunicap/cpi/euvccam/: Makefile.am  Makefile.in  debayer.c  debayer.h  error.c  euvccam_capture.c  euvccam_capture.h  euvccam_colorproc.c  euvccam_colorproc.h  euvccam_cpi.c  euvccam_cpi.h  euvccam_device.c  euvccam_device.h  euvccam_devspec.c  euvccam_devspec.h  euvccam_usb.c  euvccam_usb.h  logging.c  logging.h  myusb.h  queue.c  queue.h  usbfns.c  usbi.h  usblinuxfns.c
libunicap/cpi/include/: Makefile.in  unicap_cpi.h  unicap_cpi_std_struct.h
libunicap/cpi/thing/: queue.c
libunicap/cpi/v4l/: Makefile.am  Makefile.in  v4l.c  v4l.h
libunicap/cpi/v4l2cpi/: Makefile.am  Makefile.in  buffermanager.c  buffermanager.h  bufferpool.c  tiseuvccam.c  tisuvccam.c  udev.c  udev.h  udev_stub.c  uvcvideo.h  v4l2.c  v4l2.h
libunicap/cpi/vid21394/: 1394util.c  Makefile.am  Makefile.in  vid21394_base.c  vid21394_cpi.c  visca.h  visca_private.h  visca_property_table.h
libunicap/data/: 50-euvccam.rules  Makefile.am
libunicap/debian/: changelog  control  libunicap-doc.dirs  libunicap-doc.install  libunicap2-dev.dirs  libunicap2-dev.install  libunicap2.dirs  libunicap2.install  rules
libunicap/doc/: Makefile.in
libunicap/doc/libunicap/: Makefile.am  Makefile.in  libunicap-docs.sgml
libunicap/doc/libunicap/html/: ch01.html  index.html  libunicap-unicap.html
libunicap/doc/libunicap/tmpl/: check_match.sgml  libunicap-unused.sgml  unicap.sgml  unicap_helpers.sgml  unicap_private.sgml
libunicap/include/: Makefile.am  check_match.h  debug.h  unicap.h  unicap_helpers.h  unicap_private.h
libunicap/po/: POTFILES.in
libunicap/src/: Makefile.am  Makefile.in  unicap.c  unicap_helpers.c
libunicapgtk/: Makefile.am  Makefile.in  aclocal.m4  autogen.sh  config.h.in  configure  configure.ac
libunicapgtk-0.9.8/: AUTHORS  Makefile.am  Makefile.in  libunicapgtk.pc.in
libunicapgtk-0.9.8/include/: Makefile.am  unicapgtk_device_property.h  unicapgtk_device_selection.h  unicapgtk_property_dialog.h  unicapgtk_version.h  unicapgtk_version.h.in  unicapgtk_video_display.h
libunicapgtk-0.9.8/po/: POTFILES.in  fr.po
libunicapgtk-0.9.8/src/: Makefile.in  backend.h  backend_xv.c  backend_xv.h  unicapgtk.c  unicapgtk_device_property.c  unicapgtk_property_dialog.c  unicapgtk_video_display.c  (+1 more)
libunicapgtk/debian/: changelog  control  libunicapgtk-doc.dirs  libunicapgtk-doc.install  libunicapgtk2-dev.install  libunicapgtk2.install
libunicapgtk/doc/: Makefile.am
libunicapgtk/doc/libunicapgtk/: Makefile.am  libunicapgtk-sections.txt  libunicapgtk.types
libunicapgtk/include/: Makefile.in  unicapgtk.h  unicapgtk_device_property.h  unicapgtk_property_dialog.h  unicapgtk_video_format_selection.h
libunicapgtk/po/: ChangeLog
libunicapgtk/src/: Makefile.am  Makefile.in  backend_gtk.c  backend_gtk.h  backend_xv.c  unicapgtk_device_property.c  unicapgtk_device_selection.c  unicapgtk_priv.h  unicapgtk_property_dialog.c  unicapgtk_video_display.c
python-unicap/: ChangeLog  Makefile  README  TAGS  unicap.html  unicapgtk.html  unicapgtk.make  unicapgtk.override
(+145 files in other folders)
